local-de-hennkou

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    hello world2
+    <p class="p1">hello world2</p>
 </body>
 </html>
